--- a/app/views/layouts/_top_navbar.html.haml
+++ b/app/views/layouts/_top_navbar.html.haml
@@ -1,5 +1,5 @@
 %nav.navbar.navbar-light.navbar-fixed-top.bg-faded#top-navbar
   .container
     .navbar-header.text-xs-center
-      %a.navbar-brand#brand{:href => "#"} Furui
+      %a.navbar-brand#brand{:href => "#"} furui
     #navbar.navbar-toggleable-xs.collapse
