--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,6 @@
     .container
       = render 'layouts/top_navbar'
 
-    .container#wrapper
+    .container-fluid#wrapper
       .row
         = yield
