--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -7,6 +7,11 @@
     max-width: 100%;
 }
 
+#judged-image > img {
+    max-height: 800px;
+    max-width: 100%;
+}
+
 #judge-window {
     box-shadow: 0px 1px 2px 0px #000000;
 }
