Add ImageSet model

--- a/app/views/layouts/_top_navbar.html.haml
+++ b/app/views/layouts/_top_navbar.html.haml
@@ -3,5 +3,5 @@
     = link_to 'furui', :root, class: 'navbar-brand', id: 'brand'
     %ul.nav.navbar-nav
       %li.nav-item
-        = link_to 'Results', images_result_path, class: 'nav-link'
+        = link_to 'Results', results_path, class: 'nav-link'
 
